# biosystems

./: README.md  clean.cmake  makefile
src/: CMakeLists.txt
src/fish/: CMakeLists.txt  test-medium.cpp
src/fish/arduino/: Command_piv_force_puissance_U0_0hz.ino
src/fish/arduino/LIDAR_9DOF/: LIDAR_9DOF.ino
src/fish/arduino/calibrate/: calibrate.ino
src/fish/arduino/fish_command/: fish_command.ino
src/fish/arduino/fish_command_l3/: fish_command_l3.ino
src/fish/arduino/fish_command_v2/: fish_command_v2.ino
src/fish/arduino/fish_command_v3/: fish_command_v3.ino
src/fish/arduino/fish_command_v4/: fish_command_v4.ino
src/fish/arduino/iotest/: iotest.ino
src/fish/arduino/lidarx2gyro/: lidarx2gyro.ino
src/fish/arduino/pycom/: arduino_io.py  arduino_io_v2.py  reading_data_proprioception.py
src/lithium/: CMakeLists.txt  alpha.cpp  bmax.cpp  build-proton.cpp  config.lua  diff_v1.cpp  eta.cpp  eval_diff.cpp  fcnli.hpp  fit-h.cpp  fit-hall.cpp  fit-leak.cpp  fit-leaks.sh  fit-ph-delta.cpp  fit-ph.cpp  fit-ph.sh  fit-relax.cpp  fit_delta.cpp  fit_delta_v0.cpp  fit_intra.cpp  fit_v1.cpp  fit_ximax.cpp  flsim.cpp  fullsim.cpp  fullsim.lua  intake.cpp  intake.lua  li-common.hpp  li-tot.cpp  linear.cpp  linear.lua  linsim.cpp  linsim.lua  makefile  particles.cpp  particles2.cpp  sim.fl  sim8.cpp  simalpha.cpp  simalpha.lua  (+4 more)
src/lithium/data/: Calcul molarité lithium intracellulaire.xlsx  Compil -V2-asymptotes.xlsx  DataTableSupMat.xlsx  Fuite-Li-Intracellulaire.xlsx  La Compil des data isotopes pour Yann 12-11-2018.xlsx  La Compil pour Yann-final.xlsx  La Compil pour Yann.xlsx  Megacompile 17-11-2018.xlsx  Megacompile.xlsx  Pour Yann 6 mars 2019.xlsx  ValeursFinalesCinetiqueMolarite.xlsx  fuite120mM.txt  fuite120mM_NHE1.txt  fuite120mM_PS120.txt  fuite15mM.txt  fuite15mM_NHE1.txt  fuite15mM_PS120.txt  kh.txt  lithium avec les mains.pptx  lithiumMars-juin 2017 NHE1-2.xlsx  lithiumMars-juin 2017 NHE1.xlsx  nhe1_intake_15mM.txt  nhe1_intake_15mM_v2.txt  nouvelles valeurs molaritéintra.xlsx  ps120_intake_15mm.txt
src/lithium/doc/: Simulation-lithium 6 et 7.xlsx  alg20.wxmx  alpah20.wxmx  alpha13.wxmx  alpha14.wxmx  alpha15.wxmx  alpha18.wxmx  beat18.wxmx  bump16.wxmx  chi13.wxmx  chi13b.wxmx  chi13c.wxmx  chi13new.wxmx  chi_expand.wxmx  final20.wxmx  first.sciprj  fit15.txt  fit16.gnu  fitlong.wxmx  fitnew.txt  fullfit.txt  func.gnu  func12.gnu  func12.wxmx  func18.gnu  func19.wxmx  func20.wxmx  functions.wxmx  functions15.wxmx  functions16.wxmx  functions18.wxmx  grow13.wxmx  intra.txt  kinetics15.wxmx  leak20.wxmx  li-all-in.txt  lithium.tex  lithium10.tex  lithium11.tex  lithium12.tex  (+51 more)
src/lithium/doc/laurent/: Memo modèle Isotopes 27-11-2017.docx  Simulation-Li 6 et 7-01122017.xlsx
src/lithium/doc/old/: alpha17.wxmx  alpha18.wxmx  beat18.wxmx  bump16.wxmx  chi13b.wxmx  chi13new.wxmx  chi_expand.wxmx  fit16.gnu  fitlong.wxmx  fitnew.txt  fullfit.txt  func12.gnu  functions15.wxmx  functions16.wxmx  grow13.wxmx  kinetics15.wxmx  lithium.tex  lithium10.tex  lithium12.tex  lithium13.tex  lithium14.tex  lithium16.tex  lithium18.tex  lithium2.tex  lithium6.tex  lithium7.tex  lithium8.tex  ltfit.txt  steady10.wxmx  steady10b.wxmx  steady11b.wxmx  steady12.wxmx  steady16.wxmx  steady2.wxmx  steady3.wxmx  steady3bis.wxmx  steady4.wxmx  steady5.wxmx  steady8b.wxmx  steady8e.wxmx  (+2 more)
src/lithium/old/: diff_v1.cpp  fit_delta.cpp  fit_delta_v2.cpp  fit_v1.cpp  particles2.cpp  scaling.cpp  sim8.cpp  transient.lua
src/lithium/old_progs/: bmax.cpp  eta.cpp  fit-h.cpp  fit-hall.cpp  intake.cpp  intake.lua  linear.cpp  linsim.cpp  linsim.lua  sim.fl
src/lithium/phdata/: Compil .xlsx  fit_sig.txt  fit_v2.txt  pH10mM.txt  pH10mM.txt.sig  pH15mM.txt  pH15mM.txt.sig  pH30mM.txt  pH30mM.txt.sig  pH3mM.txt  pH3mM.txt.sig  pH60mM.txt  pH60mM.txt.sig  pH90mM.txt  pH90mM.txt.sig
src/lithium/phdata/10mM/: exp 6 10 mM - copie.xls  exp5 10 mM- copie.xls  exp6 10mM - copie.xls  exp7 10mM - copie.xls  exp8 10mM - copie.xls
src/lithium/phdata/30mM/: exp10 30mM - copie.xls  exp4 30 mM - copie.xls  exp5 30mM - copie.xls  exp5 30mM-Copie.xls  exp8 30mM-Copie.xls  exp9 30mM - copie.xls
src/lithium/phdata/3mM/: exp1 3 mM - copie.xls  exp2 3 mM - copie.xls  exp3 3mM - copie.xls  exp4  3mM- copie.xls  test 1 3 mMli - copie.xlsx
src/lithium/phdata/60mM/: manip 1 60mMli - copie.xls  manip 4 60mM - copie.xls  manip2 60mM - copie.xls  (+1 more)
src/lithium/supmat/: algebra.wxmx  coop.tex  fit-potential.gnu  functions.gnu  leaks.qti  leaks.sciprj  linear.wxmx  makefile  protons.qti  protons.sciprj  short.wxmx  supmat.sciprj  supmat.tex
(+26 files in other folders)
