CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(bio-ph)
SET(YROOT "$ENV{HOME}/program/yocto4/sdk" )

SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/..)

IF( "${YROOT}" STREQUAL "" )
	MESSAGE( FATAL_ERROR "Undefined YROOT" )
ENDIF( "${YROOT}" STREQUAL "" )

MESSAGE(STATUS "YROOT=${YROOT}")
INCLUDE("${YROOT}/share/yocto/rules.cmake")
INCLUDE_DIRECTORIES("${YROOT}/include")
LINK_DIRECTORIES("${YROOT}/lib")

ADD_SUBDIRECTORY(lithium)

