SET(CMAKE_CXX_STANDARD 11)
ADD_DEFINITIONS(-DMEDIUM_TEST=1)
SET(ARDUINO_LIBRARIES_PATH $ENV{HOME}/Documents/Arduino/libraries)
SET(MEDIUM_PATH ${ARDUINO_LIBRARIES_PATH}/medium)
SET(MEDIUM_SRCS ${MEDIUM_PATH}/medium.h ${MEDIUM_PATH}/medium.cpp)
INCLUDE_DIRECTORIES(${MEDIUM_PATH})

ADD_EXECUTABLE(test-medium test-medium.cpp ${MEDIUM_SRCS})
TARGET_LINK_YOCTO(test-medium)
